[package]
name = "simpleapp"
version = "0.0.0"
authors = ["Victor Dods <victor.dods@gmail.com>"]
edition = "2018"
description = "An example app for rwb"
repository = "https://github.com/vdods/rwb"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.74"
yew = "0.17.4"
